--- a/index.html
+++ b/index.html
@@ -1086,6 +1086,78 @@
     </div><!-- .container -->
   </section>
 
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__top">
+        <div class="footer__top-inner">
+          <div class="footer__top-item footer__top-newsletter">
+            <h6 class="footer__top-title">
+              Subscribe to our newsletter and get to know first about promos:
+            </h6>
+            <form class="footer-form">
+              <input class="footer-form__input" type="text" placeholder="Enter your email:">
+              <button class="footer-form__btn" type="submit">Send</button>
+            </form>
+          </div>
+          <div class="footer__top-item">
+            <h6 class="footer__top-title">
+              Information
+            </h6>
+            <ul class="footer-list">
+              <li class="footer-list__item"><a href="#">About company</a></li>
+              <li class="footer-list__item"><a href="#">Contacts</a></li>
+              <li class="footer-list__item"><a href="#">Promos</a></li>
+              <li class="footer-list__item"><a href="#">Stores</a></li>
+            </ul>
+          </div>
+          <div class="footer__top-item">
+            <h6 class="footer__top-title">
+              Internet store
+            </h6>
+            <ul class="footer-list">
+              <li class="footer-list__item"><a href="#">Delivery and self-pickup</a></li>
+              <li class="footer-list__item"><a href="#">Payment</a></li>
+              <li class="footer-list__item"><a href="#">Return and replacement</a></li>
+              <li class="footer-list__item"><a href="#">News</a></li>
+            </ul>
+          </div>
+          <div class="footer__top-item footer__top-social">
+            <ul class="social-list">
+              <li class="social-list__item">
+                <a href="#">
+                  <img src="images/instagram.svg" alt="">
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a href="#">
+                  <img src="images/vk.svg" alt="">
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a href="#">
+                  <img src="images/facebook.svg" alt="">
+                </a>
+              </li>
+              <li class="social-list__item">
+                <a href="#">
+                  <img src="images/youtube.svg" alt="">
+                </a>
+              </li>
+            </ul>
+          </div> <!-- .footer__top-item -->
+        </div><!-- .footer__top-inner -->
+      </div>
+      <div class="footer__bottom">
+        <a href="#" class="footer__bottom-link">
+          Public offer
+        </a>
+        <a href="#" class="footer__bottom-link">
+          Personal data processing policy
+        </a>
+      </div>
+    </div>
+  </footer>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
