--- a/catalog.html
+++ b/catalog.html
@@ -131,12 +131,12 @@
           <button>more</button>
         </div>
         <div class="catalog__filter-btn">
-          <select>
-            <option value=""></option>
-            <option value=""></option>
-            <option value=""></option>
+          <select class="filter-style select-item">
+            <option value="">By popularity</option>
+            <option value="">Option 2</option>
+            <option value="">Option 3</option>
           </select>
-          <button class="catalog__filter-btngrid">
+          <button class="catalog__filter-btngrid catalog__filter-button catalog__filter-button--active">
             <svg width="23" height="21" viewBox="0 0 23 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <rect x="1" y="1" width="21" height="19" stroke="#2F3035" stroke-width="2" />
               <rect x="7" y="6" width="2" height="2" fill="#2F3035" stroke="#2F3035" stroke-width="2" />
@@ -146,7 +146,7 @@
             </svg>
 
           </button>
-          <button class="catalog__filter-btnline">
+          <button class="catalog__filter-btnline catalog__filter-button">
             <svg width="25" height="19" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="1">
                 <rect x="6" width="19" height="3" rx="1.5" fill="#2F3035" />
@@ -168,9 +168,230 @@
               <a href="#tab-2" class="tab aside-filter__tab"><span>По марке</span></a>
             </div>
             <div class="tabs-container">
-              <div id="tab-1" class="tabs-content  tabs-content--active aside-filter__tabs-content"></div>
-              <div id="tab-1" class="tabs-content aside-filter__tabs-content"></div>
+              <div id="tab-1" class="tabs-content  tabs-content--active aside-filter__tabs-content">
+                <form action="" class="aside-filter__form">
+                  <ul class="aside-filter__list">
+                    <li class="aside-filter__item-drop">
+                      <p class="aside-filter__item-title filter__item-drop">Availability</p>
+                      <div class="aside-filter__content">
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            On stock
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            Made to order
+                          </label>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="aside-filter__item-drop">
+                      <p class="aside-filter__item-title filter__item-drop">New products</p>
+                      <div class="aside-filter__content aside-filter__content-radio">
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" name="radio" type="radio">
+                            All
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" name="radio" type="radio">
+                            New items
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" name="radio" type="radio">
+                            Promos
+                          </label>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="aside-filter__item-drop">
+                      <p class="aside-filter__item-title filter__item-drop">Price</p>
+                      <div class="aside-filter__content">
+                        <input type="text" class="js-range-slider" name="my_range" value="" data-type="double" data-min="0" data-max="10000" data-from="1000" data-to="5000" data-grid="false" data-prefix="$" />
+                      </div>
+                    </li>
+                    <li class="aside-filter__item-list">
+                      <div class="filter__item-list">
+                        <p class="filter__item-listtitle">
+                          Power, h.p.
+                        </p>
+                        <select class="filter-style filter__item-listselect">
+                          <option>90</option>
+                          <option>130</option>
+                          <option>154</option>
+                          <option>230</option>
+                          <option>300</option>
+                        </select>
+                      </div>
+
+                      <div class="filter__item-list">
+                        <p class="filter__item-listtitle">
+                          Engine power, h.p.
+                        </p>
+                        <select class="filter-style filter__item-listselect">
+                          <option>90</option>
+                          <option>130</option>
+                          <option>154</option>
+                          <option>230</option>
+                          <option>300</option>
+                        </select>
+                      </div>
+
+                      <div class="filter__item-list">
+                        <p class="filter__item-listtitle">
+                          Maximum speed
+                        </p>
+                        <select class="filter-style filter__item-listselect">
+                          <option>90</option>
+                          <option>130</option>
+                          <option>154</option>
+                          <option>230</option>
+                          <option>300</option>
+                        </select>
+                      </div>
+                      
+                      
+                    </li>
+                    <li class="aside-filter__item-drop">
+                      <p class="aside-filter__item-title filter__item-drop">Brand</p>
+                      <div class="aside-filter__content">
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" checked>
+                            BRP
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" checked>
+                            Spark 2
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            Spark 3
+                          </label>
+                        </div>
+                        <div class="filter-more">
+                          <button href="#" class="filter-more__btn">See more</button>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="aside-filter__item-drop">
+                      <p class="aside-filter__item-title filter__item-drop">Model</p>
+                      <div class="aside-filter__content">
+                        <input type="text" class="filter-search">
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" checked>
+                            Sea-doo Spark 2
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" checked>
+                            SeaDoo Spark 90 
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            SeaDoo GTI 155
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            SeaDoo GTR 230
+                          </label>
+                        </div>
+                        <div class="filter-more">
+                          <button href="#" class="filter-more__btn">See more</button>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="aside-filter__item-drop btn-checked">
+                      <p class="aside-filter__item-title filter__item-drop">Promos</p>
+                      <div class="aside-filter__content">
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" placeholder="Enter model">
+                            <span class="btn-checked__text">SALE</span>
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            <span class="btn-checked__text">NEW</span>
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" placeholder="Enter model">
+                            <span class="btn-checked__text">HIT</span>
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            <span class="btn-checked__text">RESELL</span>
+                          </label>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="aside-filter__item-drop">
+                      <p class="aside-filter__item-title filter__item-drop">Countries</p>
+                      <div class="aside-filter__content">
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" checked>
+                            Russia
+                          </label>
+                        </div>
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox" checked>
+                            Germany
+                          </label>
+                        </div><!-- .aside-filter__content-box -->
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            China
+                          </label>
+                        </div><!-- .aside-filter__content-box -->
+                        <div class="aside-filter__content-box">
+                          <label class="aside-filter__content-label" for="">
+                            <input class="filter-style" type="checkbox">
+                            USA
+                          </label>
+                        </div><!-- .aside-filter__content-box -->
+                        <div class="filter-more">
+                          <button href="#" class="filter-more__btn">See more</button>
+                        </div>
+                      </div><!-- .aside-filter__content -->
+                    </li>
+                    <li class="aside-filter__item-drop aside-filter__item-drop-btn">
+                      <button type="submit" class="filter-btn__send filter-btn__send--active">SELECT</button>
+                      <p class="filter__extra">Additional parameters</p>
+                      <div class="filter__extra-content">More...</div>
+                      <div class="filter__reset-wrapper"><button type="submit" class="filter-btn__reset">Reset filters</button></div>
+                    </li>
+                  </ul>
+                </form>
+
+              </div>
+              <div id="tab-2" class="tabs-content aside-filter__tabs-content"></div>
             </div>
+          </div>
         </aside>
         <div class="catalog__inner-list">
           <div class="product-item__wrapper">
